--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-2-web</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
+    <script src="https://kit.fontawesome.com/f504de22f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
+        <!-- navbar start here -->
+        <div class="navbar">
+            <h3 class="nav-title">Fitness</h3>
+            <div class="nav-items">
+                <p id="home">Home</p>
+                <p>Service</p>
+                <p>Contact</p>
+                <p>About</p>
+            </div>
+            <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+        </div>
+        <!-- navbar end here -->
     </header>
 
-    <main></main>
+    <main>
+
+    </main>
 
     <footer></footer>
 </body>
