--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/f504de22f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <!-- navbar start here -->
+    <header class="header-container">
+            <!-- navbar start here -->
         <div class="navbar">
             <h3 class="nav-title">Fitness</h3>
             <div class="nav-items">
@@ -22,6 +22,26 @@
             <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
         </div>
         <!-- navbar end here -->
+
+        <!-- banner-section start here  -->
+        <div class="banner-container">
+            <div class="banner-content">
+                <h1 class="banner-tittle">Get body in <br> 
+                    <span class="font">shape</span> & stay <br> healthy</h1>
+                <p class="banner-description">
+                    If you need to keep your body in shape, create a plan <br> complete with achievable goals, for a month's worth of <br> exercise and meal plans.
+                </p>
+                <div class="banner-btn">
+                    <button class="btn">Join Club Now!</button>
+                    <button class="btn-normal">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="./images/Images 1.png" alt="">
+            </div>
+        </div>
+        <!-- banner-section end here  -->
+
     </header>
 
     <main>
