--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
             </div>
             <div class="banner-img">
                 <img src="./images/Images 1.png" alt="">
+                <div class="banner-card">
+                    <div>
+                        <button class="circle"></button>
+                    </div>
+                    <div class="card-container">
+                        <h3 class="card-title">350+</h3>
+                        <p class="card-description">Video tutorial</p>
+                    </div>
+                </div>
+                <div class="banner-card-2">
+                    <div class="card-container">
+                        <h3 class="card-title-2">500+</h3>
+                        <p class="card-description-2">Free Workout Videos</p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- banner-section end here  -->
-
     </header>
 
     <main>
