--- a/index.html
+++ b/index.html
@@ -58,7 +58,58 @@
         <!-- banner-section end here  -->
     </header>
 
-    <main>
+    <main class="main-container">
+        <!-- habit-container start -->
+        <div class="habit-container">
+            <div class="habit-content">
+                <h1 class="habit-title">Change Your Habits</h1>
+                <p class="habit-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+            <!-- habit-card -->
+            <div class="habit-card-container">
+                <div class="habit-card-1">
+                    <div class="habit-card-img">
+                        <img src="./images/image 3.png" alt="">
+                    </div>
+                    <div class="habit-items">
+                        <h3 class="habit-card-title">Movement</h3>
+                    <p class="habit-card-description">We believe fitness should be <br> accessible to everyone</p>
+                    </div>
+                </div>
+
+                <div class="habit-card-2">
+                    <div class="habit-card-img">
+                        <img src="./images/image 2.png" alt="">
+                    </div>
+                    <div class="habit-items">
+                        <h3 class="habit-card-title">Time</h3>
+                    <p class="habit-card-description">Fitness enthusiasts! If you're wondering about <br>the best time to work out.</p>
+                    </div>
+                </div>
+
+                <div class="habit-card-3">
+                    <div class="habit-card-img">
+                        <img src="./images/image 4.png" alt="">
+                    </div>
+                    <div class="habit-items">
+                        <h3 class="habit-card-title">Practice</h3>
+                    <p class="habit-card-description">We believe fitness should be <br> accessible to everyone</p>
+                    </div>
+                </div>
+
+                <div class="habit-card-4">
+                    <div class="habit-card-img">
+                        <img src="./images/image 5.png" alt="">
+                    </div>
+                    <div class="habit-items">
+                        <h3 class="habit-card-title">Weight Loss</h3>
+                    <p class="habit-card-description"> After exercising, refueling your body with <br> nutritious food to replenish energy stores is crucial.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- habit-card -->
+        </div>
+        <!-- habit-container end -->
 
     </main>
 
