--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
         </div>
         <!-- habit-container end -->
 
+        <!-- run extra mile start-->
+            <div class="run-extra-container">
+                <div class="run-extra-content">
+                    <h1 class="extra-title">Run an Extra 
+                        Mile Easily</h1>
+                        <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                        <button class="btn">Join Now</button>
+                </div>
+                <div class="run-extra-img">
+                    <img src="./images/run.jpg" alt="">
+                </div>
+            </div>
+        <!-- run extra mile end -->
+
     </main>
 
     <footer></footer>
