--- a/index.html
+++ b/index.html
@@ -125,6 +125,86 @@
             </div>
         <!-- run extra mile end -->
 
+        <!-- trainings section start -->
+            <div class="training-container">
+                <div class="training-contain">
+                    <h3 class="extra-title" >Trainings and Exercises</h3>
+                    <p class="train-description">After exercising, refueling your body with
+                        nutritious food to replenish energy stores is crucial. <br>Fitness enthusiasts! If you're wondering about
+                        the best time to work out.</p>
+                </div>
+            </div>
+
+            <div class="train-card-img">
+                <div class="row-1">
+                    <div class="train-card">
+                        <img class="img-1" src="./images/exercise1.jpg" alt="">
+                        <h5>work out</h5>
+                    </div>
+                    <div class="train-card-2">
+                        <img class="img-2" src="./images/exercise2.png" alt="">
+                        <h5>work out</h5>
+                    </div>
+                    <div class="train-card  hidden">
+                        <img class="img-3" src="./images/exercise3.png" alt="">
+                        <h5>work out</h5>
+                    </div>
+                </div>
+
+                <div class="row-2">
+                    <div class="train-card-2">
+                        <img class="img-4" src="./images/exercise4.png" alt="">
+                        <h5>work out</h5>
+                    </div>
+                    <div class="train-card">
+                        <img class="img-5" src="./images/exercise5.jpg" alt="">
+                        <h5>work out</h5>
+                    </div>
+                    <div class="train-card  hidden">
+                        <img class="img-6" src="./images/exercise6.jpg" alt="">
+                        <h5>work out</h5>
+                    </div>
+                </div>
+            </div>
+        <!-- trainings section end -->
+
+        <!-- BMI Calculator start -->
+            <div class="bmi-container">
+                <h3 class="extra-title">BMI Calculator</h3>
+                <p class="train-description">Eat one boiled egg every morning for 2 weeks and see what happens to your body</p>
+            </div>
+
+            <div class="bmi-section">
+                <table>
+                    <caption>BMI Calculator Chart</caption>
+                    <thead>
+                        <tr>
+                            <th>BMI </th>
+                            <th>Weight Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        <!-- BMI Calculator end -->
+
     </main>
 
     <footer></footer>
