--- a/index.html
+++ b/index.html
@@ -175,34 +175,64 @@
             </div>
 
             <div class="bmi-section">
-                <table>
-                    <caption>BMI Calculator Chart</caption>
-                    <thead>
-                        <tr>
-                            <th>BMI </th>
-                            <th>Weight Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Below 18.5</td>
-                            <td>Underweight</td>
-                        </tr>
-                        <tr>
-                            <td>18.5 - 24.9</td>
-                            <td>Healthy</td>
-                        </tr>
-                        <tr>
-                            <td>25.0 - 29.9</td>
-                            <td>Overweight</td>
-                        </tr>
-                        <tr>
-                            <td>30.0 - and Above</td>
-                            <td>Obese</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <!-- chart start -->
+                <div class="chart">
+                    <h3 class="tb-title">BMI Calculator Chart</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>BMI </th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            <!-- chart end -->
+
+            <!-- calculator start -->
+                <div class="calculator">
+                    <div class="cal-item1">
+                        <h3 class="tb-title1">Calculate your BMI</h3>
+                        <p class="train-description">The formula is BMI = kg/m2 where kg is a person's weight in kilograms and m2 is their height in metres squared.</p>
+                    </div>
+                    <form action="">
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" placeholder="Weight/kg">
+                        <br>
+                        <input type="text" placeholder="age">
+                        <select name="" id="">
+                            <option value="">sex</option>
+                        </select>
+                        <br>
+                        <select name="" id="select">
+                            <option value="">Select an activity factor</option>
+                        </select>
+                        <br>
+                        <button class="btn">Calculate</button>
+                    </form>
+                </div>
+            <!-- calculator end -->
+
             </div>
+
         <!-- BMI Calculator end -->
 
             
