--- a/index.html
+++ b/index.html
@@ -235,7 +235,52 @@
 
         <!-- BMI Calculator end -->
 
-            
+            <!-- meet our team start -->
+
+            <div class="meet-container">
+                <h1 class="extra-title">Meet Our Team</h1>
+                <p class="train-description">To a prospect seeking out a new service provider, <br>
+                    the process can be a little overwhelming. It's easy to wonder: Who are the real people behind all the smoke and mirrors?</p>
+            </div>
+
+            <div class="meet-section">
+                <div class="meet-row-1">
+                    <div class="meet-card">
+                        <img class="trainer1" src="./images/trainer1.png" alt="">
+                    <h4 class="meet-title  hide">Jerome Bell</h4>
+                    <p class="meet-des hide">Trainer</p>
+                    </div>
+                    <div class="meet-card">
+                        <img class="trainer2" src="./images/trainer2.png" alt="">
+                    <h4 class="meet-title">Cameron Williamson</h4>
+                    <p class="meet-des">Trainer</p>
+                    </div>
+                    <div class="meet-card">
+                        <img class="trainer3" src="./images/trainer3.png" alt="">
+                    <h4 class="meet-title">Darrell Steward</h4>
+                    <p class="meet-des">Trainer</p>
+                    </div>
+                </div>
+
+                <div class="meet-row-2">
+                    <div class="meet-card">
+                        <img class="trainer4" src="./images/trainer4.png" alt="">
+                    <h4 class="meet-title hide">Dianne Russell</h4>
+                    <p class="meet-des hide">Trainer</p>
+                    </div>
+                    <div class="meet-card">
+                        <img class="trainer5" src="./images/trainer5.png" alt="">
+                    <h4 class="meet-title">Cody Fisher</h4>
+                    <p class="meet-des">Trainer</p>
+                    </div>
+                    <div class="meet-card">
+                        <img class="trainer6" src="./images/trainer6.png" alt="">
+                        <h4 class="meet-title">Theresa Webb</h4>
+                        <p class="meet-des">Trainer</p>
+                    </div>
+                </div>
+            </div>
+            <!-- meet our team end  -->
             
     </main>
 
