--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h3 class="nav-title">Fitness</h3>
             <div class="nav-items">
                 <p id="home">Home</p>
-                <p>Service</p>
-                <p>Contact</p>
-                <p>About</p>
+                <p><a href="#service">Service</a></p>
+                <p><a href="#contact">Contact</a></p>
+                <p><a href="#fitness">About</a></p>
             </div>
             <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
         </div>
@@ -283,6 +283,36 @@
             <!-- meet our team end  -->
     </main>
 
-    <footer></footer>
+    <footer class="footer-container">
+        <div class="footer-section">
+            <div class="fitness" id="fitness">
+                <h1>Fitness</h1>
+                <p class="train-description">“one's ability to execute daily activities with optimal performance, endurance, and strength with the management of disease, fatigue, and stress and reduced sedentary behavior.”</p>
+            </div>
+            <div class="get-start1">
+                <h1>Get Started</h1>
+                <ol>
+                    <li class="list-i">Service</li>
+                    <li class="list-i" id="contact">Contact Us</li>
+                    <li class="list-i">Affiliate Program</li>
+                    <li class="list-i">About Us</li>
+                </ol>
+            </div>
+            <div class="get-start1">
+                <h1>Get Started</h1>
+                <ol>
+                    <li class="list-i" id="service">Fitness</li>
+                    <li class="list-i">Platform</li>
+                    <li class="list-i">Workout Library</li>
+                    <li class="list-i">App Design</li>
+                </ol>
+            </div>
+        </div>
+        <div class="hrr">
+            <hr>
+                <h6>All right reserved @Fitness 2024</h6>
+        </div>
+
+    </footer>
 </body>
 </html>
